# home-credit-default-risk

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data_folder.dvc  docker-compose.yml  main.py  models.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: default.yaml
configs/logging/: default.yaml
configs/model/: ft_transformer.yaml  tabnet.yaml  xgboost.yaml
configs/training/: default.yaml
home_credit_risk/: commands.py
home_credit_risk/data/: loader.py
home_credit_risk/data_aggregation/: bureau.py  bureau_balance.py  credit_card.py  installments.py  merging.py  pos_cash.py  previous.py
home_credit_risk/training/: ft_transformer_trainer.py  tabnet_trainer.py  train.py  xgboost_trainer.py
notebooks/: data_aggregate_ops.ipynb  data_reading.ipynb  train.ipynb
