[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["home_credit_risk"]

[project]
name = "home-credit-default-risk"
version = "0.1.0"
description = "Home Credit Default Risk binary classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "dvc[gdrive]>=3.67.1",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "imbalanced-learn>=0.14.1",
    "iprogress>=0.4",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.5",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "pandas>=3.0.3",
    "pytorch-tabnet>=4.1.0",
    "pytorch-tabular>=1.1.0",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.6.0",
    "xgboost>=3.2.0",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
home-credit = "home_credit_risk.commands:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["notebooks/", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["home_credit_risk"]
